[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/menuPause/Resume.gd" type="Script" id=1]
[ext_resource path="res://scenes/menuPause/Pause.gd" type="Script" id=2]
[ext_resource path="res://scenes/menuPause/Options.gd" type="Script" id=3]
[ext_resource path="res://scenes/menuPause/Quit.gd" type="Script" id=4]
[ext_resource path="res://scenes/menuPause/MenuPause.gd" type="Script" id=5]
[ext_resource path="res://scenes/menuPause/newMenuPause.gd" type="Script" id=6]

[node name="MenuPause" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="MenuPause" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseList" type="VBoxContainer" parent="MenuPause"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 200.0
margin_right = 88.0
margin_bottom = 469.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="MenuPause/PauseList" groups=[
"text",
]]
margin_right = 175.0
margin_bottom = 14.0
script = ExtResource( 2 )
english_text = "Pause"
french_text = "Pause"

[node name="Resume" type="Button" parent="MenuPause/PauseList" groups=[
"text",
]]
margin_top = 18.0
margin_right = 175.0
margin_bottom = 38.0
script = ExtResource( 1 )
english_text = "Resume"
french_text = "Reprendre"

[node name="Options" type="Button" parent="MenuPause/PauseList" groups=[
"text",
]]
margin_top = 42.0
margin_right = 175.0
margin_bottom = 62.0
script = ExtResource( 3 )
english_text = "Options"
french_text = "Param√®tres"

[node name="Quit" type="Button" parent="MenuPause/PauseList" groups=[
"text",
]]
margin_top = 66.0
margin_right = 175.0
margin_bottom = 86.0
script = ExtResource( 4 )
english_text = "Quit"
french_text = "Quitter"
[connection signal="OptionPressed" from="MenuPause" to="." method="_on_MenuPause_OptionPressed"]
[connection signal="resumedPressed" from="MenuPause" to="." method="_on_MenuPause_resumedPressed"]
[connection signal="pressed" from="MenuPause/PauseList/Resume" to="MenuPause" method="_on_Resume_pressed"]
[connection signal="pressed" from="MenuPause/PauseList/Options" to="MenuPause" method="_on_Options_pressed"]
[connection signal="pressed" from="MenuPause/PauseList/Quit" to="MenuPause" method="_on_Quit_pressed"]
